transition : cardview -> appbarlayout 으로 화면 전환 효과 연습

--- a/MotionLayoutPractice/app/src/main/res/layout/activity_main.xml
+++ b/MotionLayoutPractice/app/src/main/res/layout/activity_main.xml
@@ -10,25 +10,11 @@
             type="com.example.motionlayoutpractice.MainActivity" />
     </data>
 
-    <androidx.constraintlayout.motion.widget.MotionLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/blue"
-        app:layoutDescription="@xml/activity_main_scene"
-        tools:context=".MainActivity">
+        android:layout_height="match_parent">
 
-
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_logo_white" />
-
-    </androidx.constraintlayout.motion.widget.MotionLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
 
