--- a/MotionLayoutPractice/app/src/main/res/values/colors.xml
+++ b/MotionLayoutPractice/app/src/main/res/values/colors.xml
@@ -8,4 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#1da1f2</color>
+    <color name="red">#a51e22</color>
+    <color name="darkred">#800000</color>
+
 </resources>
